--- a/app/src/main/res/menu/menu_reminders.xml
+++ b/app/src/main/res/menu/menu_reminders.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app ="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="strucits.com.reminders.ReminderAcitvity">
+    tools:context="structis.com.reminders.ReminderActivity" >
     <item android:id="@+id/action_new"
         android:title="@string/new_reminder"
         android:orderInCategory="100"
